--- a/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-cpd-wml-operator.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/operators/ibm-cpd-wml-operator.yaml
@@ -34,6 +34,6 @@ spec:
       - name: spec.name
         value: ibm-cpd-wml-operator
       - name: spec.source
-        value: ibm-cpd-wml-operator-catalog
+        value: ibm-operator-catalog
       - name: spec.sourceNamespace
         value: openshift-marketplace
