--- a/setup/ocp4x/custom-argocd-app-controller-clusterrole.yaml
+++ b/setup/ocp4x/custom-argocd-app-controller-clusterrole.yaml
@@ -390,3 +390,10 @@ rules:
       - operator.knative.dev
     resources:
       - knativeservings
+  - verbs:
+      - '*'
+    apiGroups:
+      - wml.cpd.ibm.com
+    resources:
+      - wmlbases
+
