--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -32,7 +32,7 @@ resources:
 #- argocd/serviceaccounts-b2bi-prod.yaml
 #- argocd/serviceaccounts-b2bi-nonprod.yaml
 #- argocd/sfg-b2bi-clusterwide.yaml
-#- argocd/scc-wkc-iis.yaml
+- argocd/scc-wkc-iis.yaml
 #- argocd/storage.yaml
 #- argocd/infraconfig.yaml
 #- argocd/machinesets.yaml
