--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-sfg-db2-prod.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-sfg-db2-prod.yaml
@@ -12,7 +12,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: b2bi-prod
+    namespace: tools
     server: 'https://kubernetes.default.svc'
   project: services
   source:
@@ -32,7 +32,7 @@ spec:
           image:
             repository: quay.io/hollisc/ibm-db2-sfg:1.0.4
             pullPolicy: IfNotPresent
-          storageClassName: ibmc-block-gold
+          storageClassName: managed-nfs-storage
           #storageClassName: ocs-storagecluster-cephfs
           
           service:
