--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-sfg-db2-nonprod.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-sfg-db2-nonprod.yaml
@@ -29,9 +29,9 @@ spec:
           replicaCount: 1
           serviceName: db2
           serviceAccount: db2
-#          image:
+          image:
 #            repository: quay.io/hollisc/ibm-db2-sfg:1.0.4
-#            pullPolicy: IfNotPresent
+            pullPolicy: IfNotPresent
           storageClassName: managed-nfs-storage
           #storageClassName: ocs-storagecluster-cephfs
 
