--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -42,8 +42,9 @@ resources:
 - argocd/operators/ibm-cpd-wml-operator.yaml
 - argocd/instances/ibm-cpd-wml-instance.yaml
 
-# custom operators
+# custom db2 operators
 - argocd/operators/ibm-cpd-db2oltp-operator.yaml
+- argocd/instances/ibm-cpd-db2oltp-instance.yaml
 
 ## Cloud Pak for Security
 #- argocd/operators/ibm-cp4s-operator.yaml
