--- a/setup/ocp4x/custom-argocd-app-controller-clusterrole.yaml
+++ b/setup/ocp4x/custom-argocd-app-controller-clusterrole.yaml
@@ -396,4 +396,10 @@ rules:
       - wml.cpd.ibm.com
     resources:
       - wmlbases
+  - verbs:
+      - '*'
+    apiGroups:
+      - databases.cpd.ibm.com
+    resources:
+      - db2oltpservices
 
