--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -45,8 +45,10 @@ resources:
 # custom db2 operators
 - argocd/operators/ibm-cpd-db2oltp-operator.yaml
 - argocd/instances/ibm-cpd-db2oltp-instance.yaml
+
 # custom DMC
 - argocd/operators/ibm-cpd-dmc-operator.yaml
+- argocd/instances/ibm-cpd-dmc-instance.yaml
 
 ## Cloud Pak for Security
 #- argocd/operators/ibm-cp4s-operator.yaml
