dmc instance added

--- a/setup/ocp4x/custom-argocd-app-controller-clusterrole.yaml
+++ b/setup/ocp4x/custom-argocd-app-controller-clusterrole.yaml
@@ -402,4 +402,9 @@ rules:
       - databases.cpd.ibm.com
     resources:
       - db2oltpservices
-
+  - verbs:
+      - '*'
+    apiGroups:
+      - dmc.databases.ibm.com
+    resources:
+      - dmcaddons
