--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -50,6 +50,10 @@ resources:
 - argocd/operators/ibm-cpd-dmc-operator.yaml
 #- argocd/instances/ibm-cpd-dmc-instance.yaml
 
+# custom Cognos Analytics
+- argocd/operators/ibm-cpd-ca-operator.yaml
+- argocd/instances/ibm-cpd-ca-instance.yaml
+
 ## Cloud Pak for Security
 #- argocd/operators/ibm-cp4s-operator.yaml
 #- argocd/instances/ibm-cp4sthreatmanagements-instance.yaml
