--- a/0-bootstrap/single-cluster/kustomization.yaml
+++ b/0-bootstrap/single-cluster/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
 - 1-infra/1-infra.yaml
-- 2-services/2-services.yaml
+#- 2-services/2-services.yaml
 #- 3-apps/3-apps.yaml
 patches:
 - target:
@@ -10,7 +10,7 @@ patches:
   patch: |-
     - op: add
       path: /spec/source/repoURL
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops.git
     - op: add
       path: /spec/source/targetRevision
       value: master
@@ -28,10 +28,10 @@ patches:
   patch: |-
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops.git
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops-infra.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops-infra.git
 - target:
     group: argoproj.io
     kind: AppProject
@@ -39,13 +39,13 @@ patches:
   patch: |-
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops.git
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops-services.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops-services.git
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops-apps.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops-apps.git
     - op: add
       path: /spec/sourceRepos/-
       value: https://charts.cloudnativetoolkit.dev
@@ -56,10 +56,10 @@ patches:
   patch: |-
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops.git
     - op: add
       path: /spec/sourceRepos/-
-      value: https://github.com/DUOMO-T/multi-tenancy-gitops-apps.git
+      value: https://github.com/CLOUDPAK-DEMO-B/multi-tenancy-gitops-apps.git
 - target:
     group: argoproj.io
     kind: Application
