--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -2,6 +2,9 @@ resources:
 #- argocd/consolelink.yaml
 - argocd/consolenotification.yaml
 - argocd/namespace-ibm-common-services.yaml
+
+# custom
+- arogcd/prometheus.yaml
 #- argocd/namespace-ci.yaml
 #- argocd/namespace-dev.yaml
 #- argocd/namespace-staging.yaml
