--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 - argocd/namespace-ibm-common-services.yaml
 
 # custom
-- arogcd/prometheus.yaml
+- argocd/prometheus.yaml
 #- argocd/namespace-ci.yaml
 #- argocd/namespace-dev.yaml
 #- argocd/namespace-staging.yaml
