--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -36,8 +36,9 @@ resources:
 - argocd/instances/ibm-cpd-ws-instance.yaml
 #- argocd/instances/ibm-cpd-wos-instance.yaml
 
-#- argocd/operators/ibm-cpd-wkc-operator.yaml
-#- argocd/instances/ibm-cpd-wkc-instance.yaml
+#WKS 
+- argocd/operators/ibm-cpd-wkc-operator.yaml
+- argocd/instances/ibm-cpd-wkc-instance.yaml
 
 # Datastage
 #- argocd/operators/ibm-cpd-ds-operator.yaml
